[gd_scene load_steps=8 format=2]

[ext_resource path="res://SISTEMA/GUI/GameFlow/Pantalla.tscn" type="PackedScene" id=1]
[ext_resource path="res://RECURSOS/FONTS/my-standard.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://SISTEMA/GUI/GameFlow/BotonesUsados/BotonVolver.tscn" type="PackedScene" id=3]
[ext_resource path="res://SISTEMA/GUI/GameFlow/PantallasUsadas/PantallaCreditos.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 96, 1088 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "scroll"
length = 30.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 96, 1088 ), Vector2( 96, -1500 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("BotonVolver")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 30 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "button_up" ],
"method": "emit_signal"
} ]
}

[node name="PantallaCreditos" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="TextureRect" parent="." index="0"]
modulate = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="." index="1"]
margin_left = 96.0
margin_top = 1088.0
margin_right = 1824.0
margin_bottom = 2537.01
custom_fonts/font = SubResource( 1 )
text = "Diseño y Programación:
---


Artistas Gráficos:
...


Música y Sonido:
---


Efectos Especiales:
---


Diseño de Niveles:
---


Agradecimientos:
---"
align = 1
valign = 1
autowrap = true

[node name="BotonVolver" parent="." index="2" instance=ExtResource( 3 )]
margin_left = 64.0
margin_top = 32.0
margin_right = 392.0
margin_bottom = 98.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
anims/RESET = SubResource( 2 )
anims/scroll = SubResource( 3 )

[connection signal="visibility_changed" from="." to="." method="_on_PantallaCreditos_visibility_changed"]
[connection signal="button_up" from="BotonVolver" to="." method="_on_BotonVolver_button_up"]
